Bug 89713 - Labels in file dialogs not using translated labels on Windows
Summary: Labels in file dialogs not using translated labels on Windows
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
4.3.6.2 release
Hardware: All Windows (All)
: medium minor
Assignee: Andras Timar
URL:
Whiteboard: target:6.1.0 target:6.0.0.1
Keywords:
: 66406 113722 (view as bug list)
Depends on:
Blocks: File-Dialog Not-Localizable
  Show dependency treegraph
 
Reported: 2015-02-27 09:55 UTC by rbruenner
Modified: 2019-09-23 11:19 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
The image shows how it looks currently. (103.76 KB, image/png)
2015-02-27 09:55 UTC, rbruenner
Details
Screenshot (137.70 KB, image/png)
2017-04-28 15:06 UTC, Sophia Schroeder
Details
Screenshot2 (98.22 KB, image/png)
2017-04-28 15:13 UTC, Sophia Schroeder
Details
screenshot (40.05 KB, image/png)
2017-11-29 18:43 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rbruenner 2015-02-27 09:55:39 UTC
Created attachment 113738 [details]
The image shows how it looks currently.

In the Insert Image dialogue box in the German version of LO 4.3.6, the text "Style" is untranslated. As far as I can remember, this is a regression.
Comment 1 A (Andy) 2015-02-27 20:48:45 UTC
Reproducible with LO 4.4.1.2, Win 8.1
Comment 2 Julien Nabet 2015-02-28 19:32:55 UTC
Just for the record, translation is ok with master sources (pc Debian x86-64) updated today.
Comment 3 tommy27 2016-04-16 07:27:47 UTC Comment hidden (obsolete)
Comment 4 Dieter 2017-04-20 08:56:37 UTC
I still can confirm it with LO 5.3.2.2.
Comment 5 Dieter 2017-04-23 18:12:57 UTC
Christian: I'm sure, you can find it in Pootle (see attachment 113738 [details] in the original bug report). I'm not so familiar with it, so I couldn't find it.
Comment 6 2017-04-24 16:13:51 UTC
It does not seem to be a translation bug.

With 5.3.2.2 under Linux I get the correct translation "Rahmenvorlage", so it's probably a windows bug. With older versions e.g. 4.3.7.2 I get the translation "Stil" what does seem to be an older translation of the string.
Comment 7 Sophia Schroeder 2017-04-28 15:06:19 UTC
Created attachment 132939 [details]
Screenshot
Comment 8 Sophia Schroeder 2017-04-28 15:13:30 UTC
Created attachment 132940 [details]
Screenshot2

This and the attachment accidentally not commented before confirms this behavior under Windows 10 64Bit 1703 first under LibreOffice 5.2.6.2 and this under the actual Alpha running for BHS.
Comment 9 Yousuf Philips (jay) (retired) 2017-11-29 17:53:39 UTC
Confirmed on Windows 8.1 with 6.0 beta 1. The label doesnt have a keyid when the qtz UI is assigned.
Comment 10 Yousuf Philips (jay) (retired) 2017-11-29 18:09:33 UTC
On linux, the STR_FPICKER_IMAGE_TEMPLATE string of "Frame Style: " (qtz KeyID of TeuRr) is shown in the dialog.

https://opengrok.libreoffice.org/xref/core/vcl/inc/strings.hrc#104
Comment 11 Yousuf Philips (jay) (retired) 2017-11-29 18:41:44 UTC
So on windows and mac, the STR_SVT_FILEPICKER_IMAGE_TEMPLATE string of "Style:" (qtz KeyID of emrjD) is supposedly to be used.

https://opengrok.libreoffice.org/xref/core/include/fpicker/strings.hrc#25

https://opengrok.libreoffice.org/xref/core/fpicker/source/win32/misc/resourceprovider.cxx#61

https://opengrok.libreoffice.org/xref/core/fpicker/source/aqua/resourceprovider.mm#64
Comment 12 Yousuf Philips (jay) (retired) 2017-11-29 18:43:02 UTC
Created attachment 138081 [details]
screenshot

unlike in other screenshots, the filename, open and cancel labels arent in german for me as i'm running windows in english.
Comment 13 Commit Notification 2017-12-01 04:54:14 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c1fbc21a45859d3e8a082cf410898ccfcc124425

tdf#89713 localize Windows file picker extensions

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Gabor Kelemen (Collabora) 2017-12-01 09:19:24 UTC
*** Bug 113722 has been marked as a duplicate of this bug. ***
Comment 15 Gabor Kelemen (Collabora) 2017-12-01 09:28:01 UTC
*** Bug 66406 has been marked as a duplicate of this bug. ***
Comment 16 Commit Notification 2017-12-01 13:26:19 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=40b17fe38fc3c9a4d8ac9830ef2f59e930aac701&h=libreoffice-6-0

tdf#89713 localize Windows file picker extensions

It will be available in 6.0.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Dieter 2019-09-23 11:19:23 UTC
VERIFIED with

Version: 6.3.2.2 (x64)
Build-ID: 98b30e735bda24bc04ab42594c85f7fd8be07b9c
CPU-Threads: 4; BS: Windows 10.0; UI-Render: GL; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded

It's now translated with "Rahmenvorlage"