tdf#89713 localize Windows file picker extensions

Change-Id: Ic56df1aeaeee1f027e8b11e8109dd1a3b3708697
Reviewed-on: https://gerrit.libreoffice.org/45586
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit c1fbc21a45859d3e8a082cf410898ccfcc124425)